--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,7 +1,7 @@
 
 .app-header {
     background-color: #222;
-    height: 150px;
+    height: 30%;
     color: white;
 }
 
@@ -9,12 +9,18 @@
     font-size: 1.5em;
 }
 
+form {
+    width: 50% !important;
+    margin: 0 auto !important;
+}
+
 input[type=text] {
-    width: 30%;
+    width: 60%;
     border: 2px solid #aaa;
     border-radius: 4%;
     outline: none;
     padding: 8px 35px 8px 8px;
+    margin-bottom: 10px;
     box-sizing: border-box;
     transition: 2s;
 }
