--- a/src/Styles/MainContainer.css
+++ b/src/Styles/MainContainer.css
@@ -1,3 +1,13 @@
 .main-container {
     padding: 20px;
 }
+
+.grid{
+    margin: 0 auto;
+}
+
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
