--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -90,7 +90,7 @@ a {
     color: #fff;
 }
 
-li a:hover span {
+a:hover span {
     visibility: visible;
     background-color: #333333;
     font-size: x-small;
@@ -104,8 +104,4 @@ li a:hover span {
     float: right;
     visibility: hidden;
     outline: none;
-}
-
-.player {
-    padding: 20px;
 }
